--- a/Root/PyEnzymeML.ipynb
+++ b/Root/PyEnzymeML.ipynb
@@ -13,12 +13,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'r0': <pyenzyme.enzymeml.core.enzymereaction.EnzymeReaction at 0x17e0d497ac8>}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "doc = EnzymeMLReader().readFromFile(\"Modified.omex\", omex=True)\n",
-    "doc.setName(\"neuesSuperOmex\")"
+    "doc.setName(\"neuesSuperOmex\")\n",
+    "\n",
+    "doc.getUnitDict()\n",
+    "doc.getReactantDict()\n",
+    "doc.getReactionDict()\n"
    ]
   },
   {
