--- a/Root/PyEnzymeML.ipynb
+++ b/Root/PyEnzymeML.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'r0': <pyenzyme.enzymeml.core.enzymereaction.EnzymeReaction at 0x17e0d497ac8>}"
+       "{'r0': <pyenzyme.enzymeml.core.enzymereaction.EnzymeReaction at 0x20b44178588>}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,11 +38,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "protein = Protein(    name= \"Enzym\",\n",
+    "enzyme = Protein(    name= \"Enzym\",\n",
     "                    id_=\"3132\",\n",
     "                    metaid=\"MetaID_3333\",\n",
     "                    sequence=\"d\",\n",
@@ -51,21 +51,35 @@
     "                    init_conc = 0.02 ,\n",
     "                    substance_units = \"nmol/l\",\n",
     "                 boundary=False,\n",
-    "                 constant=True)"
+    "                 constant=True)\n",
+    "\n",
+    "doc.addProtein(enzyme)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyenzyme.enzymeml.core.protein' has no attribute 'getId'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-ccdc8ad6d716>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdoc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetProteinDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mprotein\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetId\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mprotein\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'pyenzyme.enzymeml.core.protein' has no attribute 'getId'"
+     ]
+    }
+   ],
    "source": [
     "doc.getProteinDict()[protein.getId()]= protein"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,18 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Archive created: neuesSuperOmex.omex\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "writer.toFile(doc, \"Neu\")"
    ]
